src/test/resources/dev/blachut/svelte/lang/codeInsight/inspections/generics/GenericsOnModuleScript.svelte
<script context="module" lang="ts"
<error descr="The 'generics' attribute is only valid on instance scripts, not module scripts">generics</error>="T">
export const shared = 'value';
</script>
